--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,20 +10,22 @@ body {
     line-height: 30px;
     text-align: left;
     width: 960;
+    background-image: url("../images/gravel.png");
+
 }
 
 /*header working well aside some inline issues */
 .header {
     background-color:#ffffff;
     height:50px;
-    width:100%;
+    width:960px;
     color: white;
     vertical-align: middle;
-    font-size: 20px;
+    font-size: 25px;
     float:left;
     border-bottom-style: solid;
     border-bottom-color: #cccccc;
-
+    line-height: 2;
 }
 
 header {
@@ -40,18 +42,35 @@ nav {
     float:right;
 }
 
-
+img {
+    float:left;
+}
 
 a {
     color:#a2aeb9;
 }
 
 .main {
-    float: left
+    margin-top:40px;
+    float: left;
+    text-align: center;
+    width:66%;
+    background-color:white;
+
 }
 
-h3 {
-    color:#777777;
+#biography {
+    height:100%;
+    width:960px;
+    margin-left: 100px;
+    float:left;
+}
+
+h1 {
+    color:#4daba6;
+    text-align: left;
+    border-bottom-style: solid;
+    border-bottom-color: #cccccc;
 } 
 
 .footer {
@@ -59,6 +78,11 @@ h3 {
     left: 0;
     bottom: 0;
     width: 100%;
+    height:75px;
     color: #a2aeb9;
     text-align: center;
+    background-color: #666666;
+    border-top: #4daba6;
+    border-top-style: solid;
+    border-top-width: 5px;
 }
