--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ border and margin shenanigans*/
     box-sizing: border-box;
 }
 
+#page-wrap {
+    width: 960px;
+    margin: 0 auto;
+}
+
 /* Basic shit tune this*/
 body {
     color: #777777;
@@ -17,10 +22,11 @@ body {
 /*header working well aside some inline issues */
 .header {
     background-color:#ffffff;
-    height:50px;
-    width:960px;
+    height: 50px;
+    width: 960px;
+    margin: 0 auto;
     color: white;
-    vertical-align: middle;
+    vertical-align: center;
     font-size: 25px;
     float:left;
     border-bottom-style: solid;
@@ -30,9 +36,9 @@ body {
 
 header {
     background-color: #4daba6;
-    height:100%;
+    height:50px;
     width:300px;
-    margin-left: 100px;
+    margin-left:50px;
     float:left;
     font-weight: bold;
     text-align: center;
@@ -44,6 +50,7 @@ nav {
 
 img {
     float:left;
+    margin: 20px;
 }
 
 a {
@@ -53,16 +60,14 @@ a {
 .main {
     margin-top:40px;
     float: left;
-    text-align: center;
-    width:66%;
+    width:100%;
     background-color:white;
-
+    border:100px;
 }
 
 #biography {
     height:100%;
     width:960px;
-    margin-left: 100px;
     float:left;
 }
 
