--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-/* make widths in pixels take up this precise size, ignoring 
-border and margin shenanigans*/
 * {
     box-sizing: border-box;
 }
@@ -18,7 +16,7 @@ body {
     font-family: 'Oxygen', sans-serif;
 }
 
-/*header working well aside some inline issues */
+
 .header {
     position: fixed;
     left: 0;
@@ -29,8 +27,7 @@ body {
     text-align: center;
     background-color: white;
     border-bottom: #4daba6;
-    border-bottom-style: solid;
-    border-bottom-width: 5px;
+
 }
 
 .header2 {
@@ -54,7 +51,7 @@ nav {
     padding:5px;
 }
 
-img {
+.me {
     float:left;
     margin: 20px;
 }
@@ -84,6 +81,7 @@ h1 {
     text-align: left;
     border-bottom-style: solid;
     border-bottom-color: #cccccc;
+    line-height:32px;
 } 
 
 .footer {
@@ -100,7 +98,6 @@ h1 {
     border-top-width: 5px;
 }
 
-/* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */  
@@ -112,9 +109,8 @@ input[type=text], select, textarea {
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-/* Style the submit button with a specific background color etc */
 input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #4daba6;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -122,12 +118,10 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #45a049;
 }
 
-/* Add a background color and some padding around the form */
 .container {
     border-radius: 5px;
     background-color: #f2f2f2;
@@ -135,21 +129,27 @@ input[type=submit]:hover {
 }
 
 .portfbox {
+    
     display: inline-block;
-    position: relative;
     width: 250px;
-    height: 250px;
 }
 
-.portfbox:nth-child(2) {
-margin-left: 25px;
+.portfbox:nth-child(even) {
+margin-right: 300px;
 }
 
 .portfboxname {
+    float: left;
     position: relative;
+    top:-80px;
+    width:100%;
+    height: 30px;
     text-align: center;
-    background-color: cyan; /*FIXFIXFIX*/
+    background-color: #4daba6;
     padding: 1px;
     color: white;
-    z-index:5;
+}
+
+h2 {
+
 }
