Fixed inconsistent header height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h1 {
     text-align: left;
     border-bottom-style: solid;
     border-bottom-color: #cccccc;
-    line-height:32px;
+    font-size: 26px;
 } 
 
 .footer {
